--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1 class="container">Gastos personales</h1>
-<app-formulario></app-formulario>
+<h1 class="container text-center">WEB PRACTICAS</h1>
+<h3 class="container text-center">Web de prácticas de laboratorio 2do parcial</h3>
+<app-menu></app-menu>
+<app-informacion></app-informacion>
