--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <h1 class="text-center mt-2">Formulario SRI</h1>
     <div class="card">
         <div class="card-body">
             <form>
@@ -11,7 +12,7 @@
                     <label for="ingresoAnual" class="form-label">Ingreso Anual</label>
                     <input type="number" [formControl]="ingresoAnual" class="form-control" id="ingresoAnual" placeholder="Ingresa cuanto ganas al año">
                     <div *ngIf="ingresoAnual.invalid && (ingresoAnual.dirty || ingresoAnual.touched)" class="alert alert-danger mt-2">
-                        Este campo es requerido
+                        Este campo es requerido<h1 class="container">Formulario SRI</h1>
                     </div>
                 </div>
 
