--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,16 +2,16 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Información</a>
+                <a routerLink="/informacion" routerLinkActive="activo" class="nav-link">Información</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Formulario</a>
+                <a class="nav-link" routerLinkActive="activo">Formulario</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Formulario SRI</a>
+                <a routerLink="formulario2" routerLinkActive="activo" class="nav-link">Formulario SRI</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Reportes</a>
+                <a class="nav-link" routerLinkActive="activo">Reportes</a>
             </li>
         </ul>
     </div>
