--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,7 +5,7 @@
                 <a routerLink="/informacion" routerLinkActive="activo" class="nav-link">Información</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLinkActive="activo">Formulario</a>
+                <a routerLink="/formulario" class="nav-link" routerLinkActive="activo">Formulario</a>
             </li>
             <li class="nav-item">
                 <a routerLink="formulario2" routerLinkActive="activo" class="nav-link">Formulario SRI</a>
