Reporte Usuarios agregado

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,7 +11,10 @@
                 <a routerLink="formulario2" routerLinkActive="activo" class="nav-link">Formulario SRI</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLinkActive="activo">Reportes</a>
+                <a routerLink="reportes" class="nav-link" routerLinkActive="activo">Reportes</a>
+            </li>
+            <li class="nav-item">
+                <a routerLink="reporte_user" class="nav-link" routerLinkActive="activo">Reporte Usuarios</a>
             </li>
         </ul>
     </div>
