Reporte Usuarios label corregido

--- a/src/app/reporte-usuario/reporte-usuario.component.html
+++ b/src/app/reporte-usuario/reporte-usuario.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class="text-center">Reporte de Pago Impuesto a la Renta</h2>
+    <h2 class="text-center">Reporte de Usuarios</h2>
     <div>
         <table class="table">
             <thead>
