--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,6 +16,9 @@
             <li class="nav-item">
                 <a routerLink="reporte_user" class="nav-link" routerLinkActive="activo">Reporte Usuarios</a>
             </li>
+            <li class="nav-item">
+                <a routerLink="login" class="nav-link" routerLinkActive="activo">Login</a>
+            </li>
         </ul>
     </div>
 </nav>
