--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -28,9 +28,20 @@ form {
     background-color: #31973f;
     border-color: #b5e7a1;
     font-weight: bold;
+    font-size: 1rem;
 }
 
 .btn-info:hover {
     background-color: #70f181;
     border-color: #b5e7a1;
+}
+
+.btn-info2{
+    background-color: #f8b55e;
+    font-weight: bold;
+    font-size: 0.9rem;
+}
+
+.btn-info2:hover{
+    background-color: #eec084;  
 }
