--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,24 @@
-<h1 class="container text-center my-4">Iniciar Sesión</h1>
+<div>
+    <h1 class="container text-center my-4">INICIAR SESIÓN</h1>
 
-<form [formGroup]="formulario" (ngSubmit)="onSubmit()" class="container bg-light p-4 rounded shadow">
-    <div class="mb-3">
-        <label class="form-label">Correo</label>
-        <input type="email" class="form-control" formControlName="email" placeholder="Ingresa tu correo">
-    </div>
-    <div class="mb-3">
-        <label class="form-label">Contraseña</label>
-        <input type="password" class="form-control" formControlName="password" placeholder="Ingresa tu contraseña">
-    </div>
-    <div class="text-center">
-        <input type="submit" value="Ingresar" class="btn btn-info">
-    </div>
-</form>
+    <form [formGroup]="formulario" (ngSubmit)="onSubmit()" class="container bg-light p-4 rounded shadow">
+        <div class="mb-3">
+            <label class="form-label">Correo</label>
+            <input type="email" class="form-control" formControlName="email" placeholder="Ingresa tu correo">
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Contraseña</label>
+            <input type="password" class="form-control" formControlName="password" placeholder="Ingresa tu contraseña">
+        </div>
+        <div class="text-center">
+            <input type="submit" value="INGRESAR" class="btn btn-info">
+        </div>
+    </form>
+
+</div>
+
+
+<div class="container text-center my-4 bg-light p-4 rounded shadow register">
+    <h3>No tienes una cuenta?</h3>
+    <app-register></app-register>
+</div>
